feat: add v2 document foundation
